2003-11-22  Jon Schewe  <jpschewe@mtu.net>

	* web/display.jsp: Fixed big screen display to only refresh the
	window when what is to be shown has changed.  

	* web/scoreboard/allteams.jsp: Add some padding at the end of the
	scrolling of all teams to ensure that the teams can see the last
	team when running in 800x600 mode.

	* web/display.jsp: Ensure that welcome page doesn't come up everytime.

	* web/instructions.jsp: Tiebreaker info is automatically pulled
	out of the current document.

	* web/developer/index.jsp: Fixed change database page to properly
	switch databases.

2003-11-21  Jon Schewe  <jpschewe@mtu.net>

	* Release version 2.1.  Found some bugs, so this is the release
	used at Sandburg.
	
2003-11-19  Jon Schewe  <jpschewe@mtu.net>

	* src/resources/challenge-region-2003.xml: Added new tiebreaker
	and removed interference goal.

	* src/fll/web/playoff/Playoff.java (pickWinner): Fixed pickWinner
	to handle enumerated goals (845319).

2003-11-12  Jon Schewe  <jpschewe@mtu.net>

	* Release version 2.0.  This is the version of the software I plan
	to use for this season.
	
2003-11-09  Jon Schewe  <jpschewe@mtu.net>

	* web/admin/verifyTournamentInitialization.jsp: Fix Oops when
	setting tournaments.

	* src/fll/xml/GenerateDB.java (generateDB): Handle long region names.

	* web/admin/teamColumnSelection.jsp: Added column sizes to column
	selection page.

	* src/fll/Queries.java (insertTournamentsForRegions): Make sure we
	don't try to create duplicate tournaments.

2003-11-08  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/scoreEntry/ScoreEntry.java
	(generateInitForScoreEdit): Include the tournament when looking
	for initial values for score edit (836264). 

	* web/scoreboard/title.jsp: Change scoreboard text to be white so
	that it's easier to read (836265).

	* web/report/teamPerformanceReport.jsp: Display no show for no show
	performance scores (836266).

	* web/report/performanceRunReport.jsp: Display no show for no show